# AeroMCP

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-07-interpark-mcp.md
src/aeromcp/: __main__.py
src/aeromcp/common/: config.py
src/aeromcp/core/: interfaces.py  models.py
src/aeromcp/dependencies/: requester.py
src/aeromcp/infra/: build_id.py  parser.py  requester.py
src/aeromcp/mcp/: server.py
src/aeromcp/mcp/tools/: domestic.py  roundtrip.py
src/interpark_mcp/: __main__.py
src/interpark_mcp/common/: config.py
src/interpark_mcp/core/: interfaces.py  models.py
src/interpark_mcp/dependencies/: requester.py
src/interpark_mcp/infra/: build_id.py  parser.py  requester.py
src/interpark_mcp/mcp/: banner.py  server.py
src/interpark_mcp/mcp/tools/: domestic.py
tests/core/: test_di.py  test_interfaces.py  test_models.py
tests/infra/: test_build_id.py  test_parser.py  test_requester.py
tests/mcp/: test_domestic.py  test_roundtrip.py
